--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "express": "^4.17.3",
+    "path": "^0.12.7",
     "bootstrap": "^3.4.1",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
